fixed spacing of common (right) elements

--- a/waybar/style.css
+++ b/waybar/style.css
@@ -79,6 +79,7 @@ tooltip label {
 #mpris,
 #clock {
   min-width: 12px;
+  padding-right: 8px;
 }
 
 /* Your previous tweaks */
